# win32

./: BrightnessCalculation.cpp  BrightnessCalculation.h  CMakeLists.txt  CMakelists.txt  Camera.cpp  Camera.h  Deposition.h  ExportCsv.cpp  ExportCsv.h  MasterThread.h  MyUi.cpp  MyUi.h  PlotGraph.cpp  PlotGraph.h  RCa04788  RCa06860  RCa08480  RCa11664  RCa14972  RCc10680  Resource.h  ScreenRecord.cpp  ScreenRecord.h  WindowsProject1.cpp  WindowsProject1.h  WindowsProject1.rc  brightnessCalculation.h  camera.cpp  daq.h  daqSignal.h  dialog_cameraoption.h  exportCSV.h  framework.h  preferencemanager.cpp  preferencemanager.h
